# animeinfobot

./: .gitignore  Cargo.toml
src/: animeinfo.rs  main.rs
